--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -1869,7 +1869,8 @@ están en la base de datos <code>airports</code>.</p>
 distribución espacial del retraso medio de los vuelos del día 13 de
 Junio. Compara esta distribución la de otro día, por ejemplo el 13 de
 Mayo. ¿Qué observas? Intenta determinar el origen del patrón (buscando
-en Google).</p>
+en Google). Representa ambos mapas en el mismo gráfico para mayor
+claridad.</p>
 <div id="solución-8" class="section level3">
 <h3>Solución</h3>
 </div>
