--- a/tema4/tema4.html
+++ b/tema4/tema4.html
@@ -4,7 +4,7 @@
     <title>Tema 4</title>
     <meta charset="utf-8" />
     <meta name="author" content="Roi Naveiro" />
-    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.17/header-attrs.js"></script>
     <link rel="stylesheet" href="ds_slides.css" type="text/css" />
   </head>
   <body>
@@ -165,10 +165,8 @@ class: center, middle, inverse
 ---
 ## Modelización
 
-* En lo que resta de curso, introduciremos herramientas básicas de modelización, poniendo
+* En esta parte del curso, introduciremos herramientas básicas de modelización, poniendo
 el foco en su uso como **técnicas de exploración** de datos.
-
-* **No** vamos a estudiar cómo usar estas herramientas para determinar causalidad.
 
 * No hay nada malo con la exploración, pero nunca debes vender un análisis exploratorio como un análisis confirmatorio porque es **engañoso**.
 
@@ -190,7 +188,7 @@ Un modelo estadístico es un modelo matemático que incorpora un conjunto de sup
 ---
 ## ¿Qué son los modelos estadísticos?
 
-* Formalmente, un modelo estadísticos es un par `\((S \mathcal{P})\)`: `\(S\)` es el conjunto de posibles observaciones y `\(\mathcal{P}\)` es una familia de distribuciones de probabilidad.
+* Formalmente, un modelo estadísticos es un par `\((S, \mathcal{P})\)`: `\(S\)` es el conjunto de posibles observaciones y `\(\mathcal{P}\)` es una familia de distribuciones de probabilidad.
 
 * Asumimos que hay una distribución de probabilidad verdadera que gobierna la generación de datos.
 
@@ -201,7 +199,7 @@ Un modelo estadístico es un modelo matemático que incorpora un conjunto de sup
 ---
 ## ¿Qué son los modelos estadísticos?
 
-* Los modelos suelen ser paramétricos: d: `\(\mathcal {P}=\{F_{\theta }:\theta \in \Theta \}\)`
+* Los modelos suelen ser paramétricos: `\(\mathcal {P}=\{F_{\theta }:\theta \in \Theta \}\)`
 
 * Dados unos datos, el objetivo es encontrar el valor de `\(\theta\)` que mejor se ajusta a los datos.
 
@@ -318,7 +316,7 @@ ggplot(mtcars, aes(x=wt, y=mpg)) + geom_point() + theme_minimal()
 
 * Un modelo de regresión linea simple parece razonable `\(y = \beta_0 + \beta_1 x + \epsilon\)` con `\(\epsilon \sim \mathcal{N}(0, \sigma^2)\)`.
 
-* Vamos a asumir que `\(\sigma^2\)` es conocido luego los parámetros de interés son `\(\hat{\beta}_0\)` y `\(\hat{\beta}_1\)`.
+* Vamos a asumir que `\(\sigma^2\)` es conocido luego los parámetros de interés son `\(\beta_0\)` y `\(\beta_1\)`.
 
 * Existen infinitos modelos en esta familia
 
@@ -391,9 +389,10 @@ $$
 
 * `\(\hat{\beta}_0\)` y `\(\hat{\beta}_1\)` son aquellos valores que hacen que las distancias verticales vistas anteriormente sean mínimas
 
-$$
+`\begin{equation}
 \arg \min_{\beta_0, \beta_1} \sum_{i=1}^n [y_i - (\beta_0 + \beta_1 x_i)]^2
-$$
+\end{equation}`
+
 ---
 ## Regresión lineal
 
@@ -410,7 +409,7 @@ $$
 
 * Así como calcular intervalos de confianza para estos estimadores.
 
-* En este curso no nos centraremos en este aspecto. Únicamente trabajaremos con los estimadores puntuales y nos centraremos en cómo usar estos modelos para explorar los datos.
+* En este curso no nos centraremos en este aspecto. Únicamente trabajaremos con los estimadores puntuales y nos centraremos en cómo usarlos para explorar los datos.
 
 ---
 ## Regresión lineal - Residuos
@@ -460,7 +459,7 @@ grid
 ##  8  2.46
 ##  9  2.62
 ## 10  2.77
-## # ℹ 19 more rows
+## # … with 19 more rows
 ```
 
 ---
@@ -492,7 +491,7 @@ grid
 ##  8  2.46  24.1
 ##  9  2.62  23.3
 ## 10  2.77  22.5
-## # ℹ 19 more rows
+## # … with 19 more rows
 ```
 
 ---
@@ -758,9 +757,9 @@ Predecimos la media para cada grupo!
 
 * El modelo lineal más sencillo para este caso, es la **regresión lineal múltiple**
 
-$$
+`\begin{equation}
 y_i = \textbf{x}_i^\top\boldsymbol{\beta} + \epsilon = \beta_{0} + \beta_1 x_{i1} + \beta_2 x_{i2} + \dots + \beta_p x_{ip} + \epsilon
-$$
+\end{equation}`
 
 * Los efectos de diferentes covariables sobre el valor esperado de la variable dependiente son aditivos.
 
@@ -822,7 +821,7 @@ grid
 ##  8     3 BA     44732.
 ##  9     4 MA     48110.
 ## 10     4 BA     45550.
-## # ℹ 66 more rows
+## # … with 66 more rows
 ```
 
 ---
@@ -1301,7 +1300,7 @@ boot_dist
 ##  8         8  95.7
 ##  9         9  88.5
 ## 10        10  90.8
-## # ℹ 90 more rows
+## # … with 90 more rows
 ```
 
 ---
