--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><strong>Análisis y Explotación de la
 Información</strong></h1>
 <h3 class="subtitle">CUNEF Universidad</h3>
-<h4 class="date">Página actualizada: 2024-04-25</h4>
+<h4 class="date">Página actualizada: 2024-05-03</h4>
 
 </div>
 
@@ -1697,13 +1697,12 @@ página.</p>
 <ul>
 <li><a href="./tema4/tema4.html">Diapositivas</a></li>
 </ul>
-<!--
-  
-### Tema 5 : Comunicación de Resultados
-  - [Diapositivas](./tema5/tema5.html)
-
-
--->
+</div>
+<div id="tema-5-comunicación-de-resultados" class="section level3">
+<h3>Tema 5 : Comunicación de Resultados</h3>
+<ul>
+<li><a href="./tema5/tema5.html">Diapositivas</a></li>
+</ul>
 </div>
 </div>
 <div id="laboratorios" class="section level2">
@@ -1743,12 +1742,12 @@ página.</p>
 <ul>
 <li><a href="./labs/lab6.html">Ejercicios</a></li>
 </ul>
-<!--
-
-### Lab 07 - Modelos
-  - [Ejercicios](./labs/lab7.html)
-
--->
+</div>
+<div id="lab-07---modelos" class="section level3">
+<h3>Lab 07 - Modelos</h3>
+<ul>
+<li><a href="./labs/lab7.html">Ejercicios</a></li>
+</ul>
 </div>
 </div>
 
